@@ -1,3 +1,9 @@
+2015-03-30  Doug Evans  <dje@google.com>
+
+	PR c++/18141
+	* cp-namespace.c (cp_search_static_and_baseclasses): Always look for
+	klass in VAR_DOMAIN.
+
 2015-03-30  Gary Benson <gbenson@redhat.com>
 
 	* remote.c (remote_mourn_1): Remove function.  Update all callers
